# brained

./: Cargo.toml  README.md  clippy.toml  justfile  rustfmt.toml
crates/brained_backend/: Cargo.toml
crates/brained_backend/src/: backend.rs  cpu.rs  lib.rs  wgpu_backend.rs
crates/brained_dylib/: Cargo.toml
crates/brained_dylib/src/: lib.rs
crates/brained_internal/: Cargo.toml
crates/brained_internal/src/: lib.rs  prelude.rs
crates/brained_neuron/: Cargo.toml
crates/brained_neuron/src/: axon.rs  backend.rs  cpu.rs  dendrite.rs  lib.rs  neuron.rs  soma.rs  synapse.rs  types.rs
crates/brained_neuron/src/wgpu/: mod.rs  neuron.wgsl
examples/: basic_simulation.rs  cpu_simulation.rs  wgpu_simulation.rs
src/: lib.rs
src/neuron/: dendrite.rs  mod.rs  soma.rs  synapse.rs  types.rs
tests/: allocation_tests.rs  neuron_tests.rs
