[package]
name = "brained"
version = "0.0.1"
edition = "2024"
description = "An attempt to fully simulate the human brain on a computer."
repository = "https://github.com/Iskaa303/brained"
license = "AGPL-3.0-only"
readme = "README.md"

[workspace]
resolver = "3"
members = [
  "crates/*",
  "examples/*",
]

[workspace.lints.clippy]
doc_markdown = "warn"
manual_let_else = "warn"
match_same_arms = "warn"
redundant_closure_for_method_calls = "warn"
redundant_else = "warn"
semicolon_if_nothing_returned = "warn"
type_complexity = "allow"
undocumented_unsafe_blocks = "warn"
unwrap_or_default = "warn"
needless_lifetimes = "allow"
too_many_arguments = "allow"
nonstandard_macro_braces = "warn"
ptr_as_ptr = "warn"
ptr_cast_constness = "warn"
ref_as_ptr = "warn"
too_long_first_doc_paragraph = "allow"
allow_attributes = "warn"
allow_attributes_without_reason = "warn"

[workspace.lints.rust]
missing_docs = "warn"
unsafe_code = "deny"
unsafe_op_in_unsafe_fn = "warn"
unused_qualifications = "warn"

[lints]
workspace = true

[features]
default = []

dynamic_linking = ["dep:brained_dylib"]
wgpu = ["brained_internal/wgpu", "dep:wgpu"]

[workspace.dependencies]
# Brained crates
brained_internal = { path = "crates/brained_internal", version = "0.0.1", default-features = false }
brained_dylib = { path = "crates/brained_dylib", version = "0.0.1", default-features = false }
brained_backend = { path = "crates/brained_backend", version = "0.0.1" }
brained_neuron = { path = "crates/brained_neuron", version = "0.0.1", default-features = false }

# External dependencies
wgpu = "29.0.3"
pollster = "0.4.0"
bytemuck = "1.25.0"
rayon = "1.12.0"

[dependencies]
brained_internal = { workspace = true }
wgpu = { workspace = true, optional = true }

[dev-dependencies]
pollster = { workspace = true }

# Wasm does not support dynamic linking.
[target.'cfg(not(target_family = "wasm"))'.dependencies]
brained_dylib = { workspace = true, optional = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["-Zunstable-options", "--cfg", "docsrs"]

[[example]]
name = "wgpu_simulation"
required-features = ["wgpu"]
