[package]
name = "brained_backend"
version = "0.0.1"
edition = "2024"
description = "Backend abstraction for Brained."
repository = "https://github.com/Iskaa303/brained"
license = "AGPL-3.0-only"

[features]
default = []
wgpu = ["dep:wgpu"]

[dependencies]
wgpu = { workspace = true, optional = true }
pollster = { workspace = true }

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = [
  "-Zunstable-options",
  "--generate-link-to-definition",
  "--generate-macro-expansion",
]
all-features = true
