[package]
name = "brained_dylib"
version = "0.0.1"
edition = "2024"
description = "Force Brained to be dynamically linked for faster linking"
repository = "https://github.com/Iskaa303/brained"
license = "AGPL-3.0-only"

[lib]
crate-type = ["dylib"]

[dependencies]
brained_internal = { workspace = true }

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = [
  "-Zunstable-options",
  "--generate-link-to-definition",
  "--generate-macro-expansion",
]
all-features = true