[package]
name = "brained_internal"
version = "0.0.1"
edition = "2024"
description = "An internal Brained crate."
repository = "https://github.com/Iskaa303/brained"
license = "AGPL-3.0-only"

[lints]
workspace = true

[dependencies]
brained_neuron = { path = "../brained_neuron", version = "0.0.1", default-features = false }
