[package]
name = "brained_neuron"
version = "0.0.1"
edition = "2024"
description = "A crate for Brained's neuron system."
repository = "https://github.com/Iskaa303/brained"
license = "AGPL-3.0-only"

[dependencies]

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = [
  "-Zunstable-options",
  "--generate-link-to-definition",
  "--generate-macro-expansion",
]
all-features = true