[package]
name = "brained_neuron"
version = "0.0.1"
edition = "2024"
description = "A crate for Brained's neuron system."
repository = "https://github.com/Iskaa303/brained"
license = "AGPL-3.0-only"

[dependencies]
brained_backend = { workspace = true }
bytemuck = { workspace = true, features = ["derive"], optional = true }
wgpu = { workspace = true, optional = true }
pollster = { workspace = true, optional = true }
rayon = { workspace = true }

[features]
default = []
wgpu = ["brained_backend/wgpu", "dep:wgpu", "dep:bytemuck"]

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = [
  "-Zunstable-options",
  "--generate-link-to-definition",
  "--generate-macro-expansion",
]
all-features = true